2006-01-27  Hans Breuer  <hans@breuer.org>

	* app/commands.c : respect difference between documenters and
	translators and show both in about dialog. Closes bug #328711.
	
	* app/interface.c : instead of g_warning for missing shape icon
	but use message_warning and show the 'missing' icon
	
	* lib/dialibartrenderer.c : with Gtk+ 2.8 gdk_draw_layout() does
	not match pango_win32_get_context(). Use gdk_pango_get_context ().
	Also removed my special win32-modified-pango code for draw_string()
	without the help of gdk.

	* Makefile.am : include MAINTAINERS file in tarball

	* lib/conectionpoint.h : removed double include of "geometry.h"
	
2006-01-22  Hans Breuer  <hans@breuer.org>

	* app/splash.c app/commands.c : dont share the logo and finally leak
	it. Instead both place load and unref the logo themself. 
	Also unbreak GNOME case.

	* app/commands.c : use GtkAboutDialog instead of homegrown GTK+
	or GNOME specific one. 120 lines less code and more standard.
	* configure.in : require GTK+ >= 2.6

	* app/diapagelayout.c app/diaunitspinner.c app/layer_dialog.c :
	make GtkTypeInfo static const as usual elsewhere
	
	* app/recent_files.c : it almost certainly is an error to ignore
	the return value of g_list_remove_link()
	
	* lib/arrows.c lib/bezier_conn.[ch] lib/beziershape.h
	  lib/boundingbox.[ch] lib/color.[ch] lib/connectionpoint.c
	  lib/create.h lib/dia_svg.c lib/dia_xml.c lib/diaarrowchooser.c
	  lib/diagramdata.[ch] objects/UML/activity.c objects/UML/class.[ch]
	  objects/UML/uml.h : documentation fixes
	
	* lib/object.h lib/diagramdata.h : avoid circular inclusion
	* lib/connectionpoint.h lib/focus.h lib/group.h lib/handle.h
	  lib/properties.h lib/sheet.h lib/diamenu.h
	: dont include "object.h", "diatypes.h" is enough. 
	Rule of thumb: only headers declaring an inheritant of DiaObject
	should include "object.h"
	* lib/diarenderer.h : include "font.h" not strictly needed by 
	this header, but needed in almost any plug-in/